--- a/OpenBioC/app/templates/app/right_panel.html
+++ b/OpenBioC/app/templates/app/right_panel.html
@@ -1210,9 +1210,9 @@
                     <div class="input-field" ng-show="qa_show_new_comment">
                         <textarea class="validate" ng-model="qa_current_comment"></textarea>
                         <div>
-                            <label><input type="radio" name="grp1" checked /><span>Note</span></label>
-                            <label><input type="radio" name="grp1"/><span>Agree</span></label>
-                            <label><input type="radio" name="grp1"/><span>Disagree</span></label>
+                            <label><input type="radio" ng-model="qa_current_opinion" value="note" checked /><span>Note</span></label>
+                            <label><input type="radio" ng-model="qa_current_opinion" value="agree"/><span>Agree</span></label>
+                            <label><input type="radio" ng-model="qa_current_opinion" value="disagree"/><span>Disagree</span></label>
                         </div>
                                         
                         <a class="waves-effect waves-light btn-small" href=""
