view updownvote_comment  #124

--- a/OpenBioC/app/templates/app/right_panel.html
+++ b/OpenBioC/app/templates/app/right_panel.html
@@ -1192,9 +1192,9 @@
                             {% endverbatim %}
                             </small>
                             <div class="box upDownVoteBox" style="margin-top: -5px; margin-left: 5px;">
-                                <div class="upDownVoteDiv upvoteDiv"><i class="material-icons tiny" ng-click="updownvote_comment(qa_comment_id, true)">thumb_up</i></div>
-                                <span class="upDownVoteSpan" ng-bind="qa_score"></span>
-                                <div class="upDownVoteDiv downvoteDiv"><i class="material-icons tiny">thumb_down</i></div>
+                                <div class="upDownVoteDiv upvoteDiv"><i class="material-icons tiny" ng-click="updownvote_comment(qa_comment_id, true, qa_score)">thumb_up</i></div>
+                                <span class="upDownVoteSpan" ng-bind="qa_score.score"></span>
+                                <div class="upDownVoteDiv downvoteDiv"><i class="material-icons tiny" ng-click="updownvote_comment(qa_comment_id, false, qa_score)">thumb_down</i></div>
                             </div>
                         </div>
                         <div>
@@ -1283,9 +1283,9 @@
                             <a class="waves-effect btn-flat qaReplyBtn" href=""
                                 ng-click="qa_reply_button_clicked(post.id)"><u>Reply</u></a>
                             <div class="box upDownVoteBox">
-                                <div class="upDownVoteDiv upvoteDiv active"><i class="material-icons tiny">thumb_up</i></div>
+                                <div class="upDownVoteDiv upvoteDiv active"><i class="material-icons tiny" ng-click="updownvote_comment(post.id, true, post)">thumb_up</i></div>
                                 <span class="upDownVoteSpan" ng-bind="post.score"></span>
-                                <div class="upDownVoteDiv downvoteDiv"><i class="material-icons tiny">thumb_down</i></div>
+                                <div class="upDownVoteDiv downvoteDiv"><i class="material-icons tiny" ng-click="updownvote_comment(post.id, false, post)">thumb_down</i></div>
                             </div>
                             <div class="input-field" ng-show="post.replying">
                                 <textarea class="validate" ng-model="qa_current_reply"></textarea>
@@ -1311,9 +1311,9 @@
                                     <a class="waves-effect btn-flat qaReplyBtn" href=""
                                         ng-click="qa_reply_button_clicked(post2.id)"><u>Reply</u></a>
                                     <div class="box upDownVoteBox">
-                                        <div class="upDownVoteDiv upvoteDiv active"><i class="material-icons tiny">thumb_up</i></div>
+                                        <div class="upDownVoteDiv upvoteDiv active"><i class="material-icons tiny" ng-click="updownvote_comment(post2.id, true, post2)">thumb_up</i></div>
                                         <span class="upDownVoteSpan" ng-bind="post2.score"></span>
-                                        <div class="upDownVoteDiv downvoteDiv"><i class="material-icons tiny">thumb_down</i></div>
+                                        <div class="upDownVoteDiv downvoteDiv"><i class="material-icons tiny" ng-click="updownvote_comment(post2.id, false, post2)">thumb_down</i></div>
                                     </div>
                                     <div class="input-field" ng-show="post2.replying">
                                         <textarea class="validate" ng-model="qa_current_reply"></textarea>
@@ -1339,9 +1339,9 @@
                                             <a class="waves-effect btn-flat qaReplyBtn" href=""
                                                 ng-click="qa_reply_button_clicked(post3.id)"><u>Reply</u></a>
                                             <div class="box upDownVoteBox">
-                                                <div class="upDownVoteDiv upvoteDiv active"><i class="material-icons tiny">thumb_up</i></div>
+                                                <div class="upDownVoteDiv upvoteDiv active"><i class="material-icons tiny" ng-click="updownvote_comment(post3.id, true, post3)">thumb_up</i></div>
                                                 <span class="upDownVoteSpan" ng-bind="post3.score"></span>
-                                                <div class="upDownVoteDiv downvoteDiv"><i class="material-icons tiny">thumb_down</i></div>
+                                                <div class="upDownVoteDiv downvoteDiv"><i class="material-icons tiny" ng-click="updownvote_comment(post3.id, false, post3)">thumb_down</i></div>
                                             </div>
                                             <div class="input-field" ng-show="post3.replying">
                                                 <textarea class="validate" ng-model="qa_current_reply"></textarea>
@@ -1367,9 +1367,9 @@
                                                     <a class="waves-effect btn-flat qaReplyBtn" href=""
                                                         ng-click="qa_reply_button_clicked(post4.id)"><u>Reply</u></a>
                                                     <div class="box upDownVoteBox">
-                                                        <div class="upDownVoteDiv upvoteDiv active"><i class="material-icons tiny">thumb_up</i></div>
+                                                        <div class="upDownVoteDiv upvoteDiv active"><i class="material-icons tiny" ng-click="updownvote_comment(post4.id, true, post4)">thumb_up</i></div>
                                                         <span class="upDownVoteSpan" ng-bind="post4.score"></span>
-                                                        <div class="upDownVoteDiv downvoteDiv"><i class="material-icons tiny">thumb_down</i></div>
+                                                        <div class="upDownVoteDiv downvoteDiv"><i class="material-icons tiny" ng-click="updownvote_comment(post4.id, false, post4)">thumb_down</i></div>
                                                     </div>
                                                     <div class="input-field" ng-show="post4.replying">
                                                         <textarea class="validate"
@@ -1392,9 +1392,9 @@
                                                                     alt="" class="circle avatarForumReply">
                                                                 <small>Replied by <a ng-click="interlink({type: 'u', username: post5.username})">u/<span ng-bind="post5.username"></span></a> on <span ng-bind="post5.created_at"></span> <span ng-bind="post5.opinion"></span></small>
                                                                 <div class="box upDownVoteBox" style="margin-top: -5px; margin-left: 5px;">
-                                                                    <div class="upDownVoteDiv upvoteDiv active"><i class="material-icons tiny">thumb_up</i></div>
+                                                                    <div class="upDownVoteDiv upvoteDiv active"><i class="material-icons tiny" ng-click="updownvote_comment(post5.id, true, post5)">thumb_up</i></div>
                                                                     <span class="upDownVoteSpan" ng-bind="post5.score"></span>
-                                                                    <div class="upDownVoteDiv downvoteDiv"><i class="material-icons tiny">thumb_down</i></div>
+                                                                    <div class="upDownVoteDiv downvoteDiv"><i class="material-icons tiny" ng-click="updownvote_comment(post5.id, false, post5)">thumb_down</i></div>
                                                                 </div>
                                                             </div>
                                                             <span ng-bind-html="post5.comment_html"></span>
