--- a/OpenBioC/app/templates/app/qa.html
+++ b/OpenBioC/app/templates/app/qa.html
@@ -5,6 +5,13 @@
     </div>
     <div class="input-field" ng-show="qa_gen['{{ qa_type }}'].qa_show_new_comment">
         <textarea class="validate" ng-model="qa_gen['{{ qa_type }}'].qa_current_comment"></textarea>
+        <!-- There is not point in having an opinion on the first comment
+        <div>
+            <label><input type="radio" ng-model="qa_gen['{{ qa_type }}'].qa_comment_opinion" value="note" checked /><span>Note</span></label>
+            <label><input type="radio" ng-model="qa_gen['{{ qa_type }}'].qa_comment_opinion" value="agree"/><span>Agree</span></label>
+            <label><input type="radio" ng-model="qa_gen['{{ qa_type }}'].qa_comment_opinion" value="disagree"/><span>Disagree</span></label>
+        </div>
+        -->
         <a class="waves-effect waves-light btn-small" href=""
             ng-click="gen_qa_comment_save_button_pressed('{{ qa_type }}')">Save</a>
         <a class="waves-effect waves-light btn-small" href=""
@@ -38,15 +45,25 @@
             <div class="valign-wrapper">
                 <img src="/static/app/images/konstantina/img_avatar.png" alt=""
                     class="circle avatarForumReply">
-                <small>Commented by <a ng-click="interlink({type: 'u', username: post.username})">u/<span ng-bind="post.username"></span></a> on <span ng-bind="post.created_at"></span><span></small>
+                <small>Commented by <a ng-click="interlink({type: 'u', username: post.username})">u/<span ng-bind="post.username"></span></a> on <span ng-bind="post.created_at"></span> <span ng-bind="post.opinion"></span></small>
+                <div class="box upDownVoteBox">
+                    <div class="upDownVoteDiv upvoteDiv" ng-class="{'active': post.voted['up']}"><i class="material-icons tiny" ng-click="updownvote_comment(post.id, true, post, post.voted)">thumb_up</i></div>
+                    <span class="upDownVoteSpan" ng-bind="post.score"></span>
+                    <div class="upDownVoteDiv downvoteDiv" ng-class="{'active': post.voted['down']}"><i class="material-icons tiny" ng-click="updownvote_comment(post.id, false, post, post.voted)">thumb_down</i></div>
+                </div>
             </div>
             <span ng-bind-html="post.comment_html"></span>
             <a class="waves-effect btn-flat qaReplyBtn" href=""
                 ng-click="gen_qa_reply_button_clicked(post.id, '{{ qa_type }}')"><u>Reply</u></a>
             <div class="input-field" ng-show="post.replying">
                 <textarea class="validate" ng-model="qa_current_reply"></textarea>
+                <div>
+                    <label><input type="radio" ng-model="qa_reply_opinion" value="note" checked /><span>Note</span></label>
+                    <label><input type="radio" ng-model="qa_reply_opinion" value="agree"/><span>Agree</span></label>
+                    <label><input type="radio" ng-model="qa_reply_opinion" value="disagree"/><span>Disagree</span></label>
+                </div>
                 <a class="waves-effect waves-light btn-small" href=""
-                    ng-click="gen_qa_reply_save_button_pressed(post.id, qa_current_reply, '{{ qa_type }}')">Save</a>
+                    ng-click="gen_qa_reply_save_button_pressed(post.id, qa_current_reply, qa_reply_opinion, '{{ qa_type }}')">Save</a>
                 <a class="waves-effect waves-light btn-small" href=""
                     ng-click="qa_reply_cancel_button_pressed(post.id)">Cancel</a>
             </div>
@@ -55,15 +72,25 @@
                     <div class="valign-wrapper">
                         <img src="/static/app/images/konstantina/img_avatar.png" alt=""
                             class="circle avatarForumReply">
-                        <small>Replied by <a ng-click="interlink({type: 'u', username: post2.username})">u/<span ng-bind="post2.username"></span></a> on <span ng-bind="post2.created_at"></span><span></small>
+                        <small>Replied by <a ng-click="interlink({type: 'u', username: post2.username})">u/<span ng-bind="post2.username"></span></a> on <span ng-bind="post2.created_at"></span> <span ng-bind="post2.opinion"></span></small>
+                        <div class="box upDownVoteBox">
+                            <div class="upDownVoteDiv upvoteDiv" ng-class="{'active': post2.voted['up']}"><i class="material-icons tiny" ng-click="updownvote_comment(post2.id, true, post2, post2.voted)">thumb_up</i></div>
+                            <span class="upDownVoteSpan" ng-bind="post2.score"></span>
+                            <div class="upDownVoteDiv downvoteDiv" ng-class="{'active': post2.voted['down']}"><i class="material-icons tiny" ng-click="updownvote_comment(post2.id, false, post2, post2.voted)">thumb_down</i></div>
+                        </div>
                     </div>
                     <span ng-bind-html="post2.comment_html"></span>
                     <a class="waves-effect btn-flat qaReplyBtn" href=""
                         ng-click="gen_qa_reply_button_clicked(post2.id, '{{ qa_type }}')"><u>Reply</u></a>
                     <div class="input-field" ng-show="post2.replying">
                         <textarea class="validate" ng-model="qa_current_reply"></textarea>
+                        <div>
+                            <label><input type="radio" ng-model="qa_reply_opinion" value="note" checked /><span>Note</span></label>
+                            <label><input type="radio" ng-model="qa_reply_opinion" value="agree"/><span>Agree</span></label>
+                            <label><input type="radio" ng-model="qa_reply_opinion" value="disagree"/><span>Disagree</span></label>
+                        </div>
                         <a class="waves-effect waves-light btn-small" href=""
-                            ng-click="gen_qa_reply_save_button_pressed(post2.id, qa_current_reply, '{{ qa_type }}')">Save</a>
+                            ng-click="gen_qa_reply_save_button_pressed(post2.id, qa_current_reply, qa_reply_opinion, '{{ qa_type }}')">Save</a>
                         <a class="waves-effect waves-light btn-small" href=""
                             ng-click="qa_reply_cancel_button_pressed(post2.id)">Cancel</a>
                     </div>
@@ -73,15 +100,25 @@
                             <div class="valign-wrapper">
                                 <img src="/static/app/images/konstantina/img_avatar.png" alt=""
                                     class="circle avatarForumReply">
-                                <small>Replied by <a ng-click="interlink({type: 'u', username: post3.username})">u/<span ng-bind="post3.username"></span></a> on <span ng-bind="post3.created_at"></span><span></small>
+                                <small>Replied by <a ng-click="interlink({type: 'u', username: post3.username})">u/<span ng-bind="post3.username"></span></a> on <span ng-bind="post3.created_at"></span> <span ng-bind="post3.opinion"></span></small>
+                                <div class="box upDownVoteBox">
+                                    <div class="upDownVoteDiv upvoteDiv" ng-class="{'active': post3.voted['up']}"><i class="material-icons tiny" ng-click="updownvote_comment(post3.id, true, post3, post3.voted)">thumb_up</i></div>
+                                    <span class="upDownVoteSpan" ng-bind="post3.score"></span>
+                                    <div class="upDownVoteDiv downvoteDiv" ng-class="{'active': post3.voted['down']}"><i class="material-icons tiny" ng-click="updownvote_comment(post3.id, false, post3, post3.voted)">thumb_down</i></div>
+                                </div>
                             </div>
                             <span ng-bind-html="post3.comment_html"></span>
                             <a class="waves-effect btn-flat qaReplyBtn" href=""
                                 ng-click="gen_qa_reply_button_clicked(post3.id, '{{ qa_type }}')"><u>Reply</u></a>
                             <div class="input-field" ng-show="post3.replying">
                                 <textarea class="validate" ng-model="qa_current_reply"></textarea>
+                                <div>
+                                    <label><input type="radio" ng-model="qa_reply_opinion" value="note" checked /><span>Note</span></label>
+                                    <label><input type="radio" ng-model="qa_reply_opinion" value="agree"/><span>Agree</span></label>
+                                    <label><input type="radio" ng-model="qa_reply_opinion" value="disagree"/><span>Disagree</span></label>
+                                </div>
                                 <a class="waves-effect waves-light btn-small" href=""
-                                    ng-click="gen_qa_reply_save_button_pressed(post3.id, qa_current_reply, '{{ qa_type }}')">Save</a>
+                                    ng-click="gen_qa_reply_save_button_pressed(post3.id, qa_current_reply, qa_reply_opinion, '{{ qa_type }}')">Save</a>
                                 <a class="waves-effect waves-light btn-small" href=""
                                     ng-click="qa_reply_cancel_button_pressed(post3.id)">Cancel</a>
                             </div>
@@ -91,7 +128,12 @@
                                     <div class="valign-wrapper">
                                         <img src="/static/app/images/konstantina/img_avatar.png" alt=""
                                             class="circle avatarForumReply">
-                                        <small>Replied by <a ng-click="interlink({type: 'u', username: post4.username})">u/<span ng-bind="post4.username"></span></a> on <span ng-bind="post4.created_at"></span><span></small>
+                                        <small>Replied by <a ng-click="interlink({type: 'u', username: post4.username})">u/<span ng-bind="post4.username"></span></a> on <span ng-bind="post4.created_at"></span> <span ng-bind="post4.opinion"></span></small>
+                                        <div class="box upDownVoteBox">
+                                            <div class="upDownVoteDiv upvoteDiv" ng-class="{'active': post4.voted['up']}"><i class="material-icons tiny" ng-click="updownvote_comment(post4.id, true, post4, post4.voted)">thumb_up</i></div>
+                                            <span class="upDownVoteSpan" ng-bind="post4.score"></span>
+                                            <div class="upDownVoteDiv downvoteDiv" ng-class="{'active': post4.voted['down']}"><i class="material-icons tiny" ng-click="updownvote_comment(post4.id, false, post4, post4.voted)">thumb_down</i></div>
+                                        </div>
                                     </div>
                                     <span ng-bind-html="post4.comment_html"></span>
                                     <a class="waves-effect btn-flat qaReplyBtn" href=""
@@ -99,8 +141,13 @@
                                     <div class="input-field" ng-show="post4.replying">
                                         <textarea class="validate"
                                             ng-model="qa_current_reply"></textarea>
+                                        <div>
+                                            <label><input type="radio" ng-model="qa_reply_opinion" value="note" checked /><span>Note</span></label>
+                                            <label><input type="radio" ng-model="qa_reply_opinion" value="agree"/><span>Agree</span></label>
+                                            <label><input type="radio" ng-model="qa_reply_opinion" value="disagree"/><span>Disagree</span></label>
+                                        </div>
                                         <a class="waves-effect waves-light btn-small" href=""
-                                            ng-click="gen_qa_reply_save_button_pressed(post4.id, qa_current_reply, '{{ qa_type }}')">Save</a>
+                                            ng-click="gen_qa_reply_save_button_pressed(post4.id, qa_current_reply, qa_reply_opinion, '{{ qa_type }}')">Save</a>
                                         <a class="waves-effect waves-light btn-small" href=""
                                             ng-click="qa_reply_cancel_button_pressed(post4.id)">Cancel</a>
                                     </div>
@@ -110,7 +157,12 @@
                                             <div class="valign-wrapper">
                                                 <img src="/static/app/images/konstantina/img_avatar.png"
                                                     alt="" class="circle avatarForumReply">
-                                                <small>Replied by <a ng-click="interlink({type: 'u', username: post5.username})">u/<span ng-bind="post5.username"></span></a> on <span ng-bind="post5.created_at"></span><span></small>
+                                                <small>Replied by <a ng-click="interlink({type: 'u', username: post5.username})">u/<span ng-bind="post5.username"></span></a> on <span ng-bind="post5.created_at"></span> <span ng-bind="post5.opinion"></span></small>
+                                                <div class="box upDownVoteBox">
+                                                    <div class="upDownVoteDiv upvoteDiv" ng-class="{'active': post5.voted['up']}"><i class="material-icons tiny" ng-click="updownvote_comment(post5.id, true, post5, post5.voted)">thumb_up</i></div>
+                                                    <span class="upDownVoteSpan" ng-bind="post5.score"></span>
+                                                    <div class="upDownVoteDiv downvoteDiv" ng-class="{'active': post5.voted['down']}"><i class="material-icons tiny" ng-click="updownvote_comment(post5.id, false, post5, post5.voted)">thumb_down</i></div>
+                                                </div>
                                             </div>
                                             <span ng-bind-html="post5.comment_html"></span>
                                             <!-- We allow for 5 levels of comment nesting -->
