#131 border added on tool/workflow discussion

--- a/OpenBioC/app/static/app/konstantina/css/style.css
+++ b/OpenBioC/app/static/app/konstantina/css/style.css
@@ -584,3 +584,14 @@ nav {
     display: inline-block;
     /* font-size: 18px; */
 } 
+
+/* ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ */
+
+/* ---------------------------------------------------------------------------------- Q & A ------------------------------------------------------------------------------------- */
+
+/* ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ */
+
+.qaCollectionItem{
+    border: 1px solid #e0e0e0;
+    border-bottom: 1px solid #e0e0e0 !important;
+}
